fix table scrollbar flickering when triggering menu

--- a/frontend/src/app/module/component/data-table/data-table.component.scss
+++ b/frontend/src/app/module/component/data-table/data-table.component.scss
@@ -1,8 +1,11 @@
 @import "src/assets/scss/colors";
 
 .mat-table {
-  overflow-x: auto;
   width: 100%;
+}
+
+.table-scroll {
+  overflow-x: auto;
 }
 
 .mat-cell,
